.sfpowerscripts/mp3iC_source/.sfpowerscripts/Obj5A_mdapi/objects/sObject_Trigger_Setting__mdt.object
<CustomObject>
    
    <label>sObject Trigger Setting</label>
    
    <pluralLabel>sObject Trigger Settings</pluralLabel>
    
    
<fields>
        
    <fullName>Bypass_Execution__c</fullName>
        
    <defaultValue>false</defaultValue>
        
    <description>Set this to true to bypass all Trigger Actions from being called on this sObject</description>
        
        
        
    <inlineHelpText>Set this to true to bypass all Trigger Actions from being called on this sObject</inlineHelpText>
        
    <label>Bypass Execution</label>
        
    <type>Checkbox</type>
        
</fields>
    <fields>
        
    <fullName>Bypass_Permission__c</fullName>
        
    <description>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will be bypassed if the running user has the custom permission identified.</description>
        
        
        
    <inlineHelpText>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will be bypassed if the running user has the custom permission identified.</inlineHelpText>
        
    <label>Bypass Permission</label>
        
    <length>255</length>
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Object_API_Name__c</fullName>
        
    <description>Enter the full API Name of the object for this trigger.</description>
        
        
        
    <inlineHelpText>Enter the full API Name of the object for this trigger.</inlineHelpText>
        
    <label>Object API Name</label>
        
    <length>255</length>
        
    <required>true</required>
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Object_Namespace__c</fullName>
        
    <description>Enter the namespace object for this trigger.</description>
        
        
        
    <inlineHelpText>Enter the namespace object for this trigger.</inlineHelpText>
        
    <label>Object Namespace</label>
        
    <length>255</length>
        
        
    <type>Text</type>
        
        
</fields>
    <fields>
        
    <fullName>Required_Permission__c</fullName>
        
    <description>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will only execute if the running user has the custom permission identified.</description>
        
        
        
    <inlineHelpText>Optional. Enter the API name of a permission. If this field has a value, then the triggers on this object will only execute if the running user has the custom permission identified.</inlineHelpText>
        
    <label>Required Permission</label>
        
    <length>255</length>
        
        
    <type>Text</type>
        
        
</fields>
</CustomObject>